# searchbench

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SEARCHBENCH_SPEC_REVISED.md  config.toml  pyproject.toml  requirements.txt
.beads/: issues.jsonl
results/: 2026-01-11.html  history.json  latest.html
scripts/: searchbench
searchbench/: calibrate.py  cli.py  config.py  judge.py  reporter.py  runner.py
searchbench/providers/: __init__.py  base.py  brave.py  exa.py  linkup.py  parallel.py  tavily.py
searchbench/queries/: __init__.py  hard.json  private.json.template  public.json
tests/: test_judge.py  test_providers.py
